[package]
name = "asrlg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-terminal = "0.8.7"
bracket-random = "0.8.7"
bracket-geometry = "0.8.7"
legion = "0.4.0"
serde = "1.0.152"
ron = "0.8.0"
rand = "0.8.5"
kira = "0.7.1"

[profile.release]
lto = "thin"
